# odil

./: .bumpversion.cfg  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Doxyfile  FindDCMTK.cmake  FindICU.cmake  FindJsonCpp.cmake  FindLog4Cpp.cmake  Index.md  OdilConfig.cmake.in  OdilConfigVersion.cmake.in  README.html  README.md  appveyor.full.yml  appveyor.yml  conf.py  ctest-to-junit.xsl  generate_registry  index.html  odil-cli-import-path.patch  odil.js  odil.js.mem  odil.spec  print.html  print.js  registry.cpp.tmpl  registry.h.tmpl  registry_group.cpp.tmpl  registry_group.h.tmpl  search.html  searchindex.js
applications/: CMakeLists.txt  dicomdir.py  echo.py  find.py  get.py  odil  print_.py  store.py  transcode.py
applications/cli/: __init__.py  dicomdir.py  echo.py  find.py  get.py  print_.py  store.py  transcode.py
examples/: CMakeLists.txt  convert.py  dicomdir.cpp  dump.cpp  dump.py  find.cpp  find.py  genericscp.cpp  get.cpp  move.cpp  print.html  print.js  qido-rs-client.cpp  store.cpp  stow-rs-client.cpp  wado-rs-client.cpp
examples/cpp/: CMakeLists.txt  dump.cpp  find.cpp  genericscp.cpp  get.cpp  move.cpp  qido-rs-client.cpp  store.cpp  stow-rs-client.cpp  wado-rs-client.cpp
examples/js/: CMakeLists.txt  print.html  print.js  qido.html  qido.js  wado.html  wado.js
examples/python/: CMakeLists.txt  convert.py  dump.py  find.py
src/: CMakeLists.txt
src/dcmtkpp/: AAbortPDU.cpp  AAbortPDU.h  AAssociateRJPDU.cpp  AAssociateRJPDU.h  AReleaseRPPDU.cpp  AReleaseRPPDU.h  AReleaseRQPDU.cpp  AReleaseRQPDU.h  ApplicationContext.cpp  ApplicationContext.h  Association.cpp  Association.h  AssociationAcceptor.cpp  AssociationAcceptor.h  AssociationParameters.cpp  AssociationParameters.h  BasicDirectoryCreator.cpp  BasicDirectoryCreator.h  CEchoRequest.cpp  CEchoRequest.h  CEchoResponse.cpp  CEchoResponse.h  CFindRequest.cpp  CFindRequest.h  CFindResponse.cpp  CFindResponse.h  CGetRequest.cpp  CGetRequest.h  CGetResponse.cpp  CGetResponse.h  CMoveRequest.cpp  CMoveRequest.h  CMoveResponse.cpp  CMoveResponse.h  CStoreRequest.cpp  CStoreRequest.h  CStoreResponse.cpp  CStoreResponse.h  Cancellation.cpp  Cancellation.h  (+106 more)
src/odil/: Association.cpp  Association.h  AssociationAborted.cpp  AssociationAborted.h  AssociationAcceptor.cpp  AssociationAcceptor.h  AssociationParameters.cpp  AssociationParameters.h  AssociationReceiver.cpp  AssociationReceiver.h  AssociationReleased.cpp  AssociationReleased.h  AssociationRequester.cpp  AssociationRequester.h  BasicDirectoryCreator.cpp  BasicDirectoryCreator.h  DataSet.cpp  DataSet.h  EchoSCP.cpp  EchoSCP.h  EchoSCU.cpp  EchoSCU.h  Element.cpp  Element.h  ElementsDictionary.cpp  ElementsDictionary.h  Exception.cpp  Exception.h  FindSCP.cpp  FindSCP.h  FindSCU.cpp  FindSCU.h  GetSCP.cpp  GetSCP.h  GetSCU.cpp  GetSCU.h  MessageReceiver.cpp  MessageReceiver.h  MessageSender.cpp  MessageSender.h  (+204 more)
tests/: CMakeLists.txt  ConnectionFixtureBase.cpp  ConnectionFixtureBase.h  MessageFixtureBase.h  PeerFixtureBase.h  peer_fixture_base.py  run  run.sh
tests/code/: AAbortPDU.cpp  AAssociateRJPDU.cpp  AReleaseRPPDU.cpp  AReleaseRQPDU.cpp  ApplicationContext.cpp  Association.cpp  AssociationAcceptor.cpp  AssociationParameters.cpp  AssociationReceiver.cpp  AssociationRequester.cpp  BasicDirectoryCreator.cpp  CEchoRequest.cpp  CEchoResponse.cpp  CFindRequest.cpp  CFindResponse.cpp  CGetRequest.cpp  CGetResponse.cpp  CMoveRequest.cpp  CMoveResponse.cpp  CStoreRequest.cpp  CStoreResponse.cpp  Cancellation.cpp  DataSet.cpp  DcmtkAssociation.cpp  DcmtkException.cpp  EchoSCP.cpp  EchoSCU.cpp  Element.cpp  ElementAccessor.cpp  Exception.cpp  FindSCP.cpp  FindSCU.cpp  GetSCP.cpp  GetSCU.cpp  MaximumLength.cpp  Message.cpp  MessageReceiver.cpp  MessageSender.cpp  MoveSCP.cpp  MoveSCU.cpp  (+29 more)
tests/data/: dataset.dcm  dcmqrscp.config
tests/tools/: CMakeLists.txt  dndefine.h  getscu.cc  scu.cc  scu.h
tests/wrappers/: test_association.py  test_association_parameters.py  test_basic_directory_creator.py  test_data_set.py  test_echo_scp.py  test_echo_scu.py  test_element.py  test_elements_dictionary.py  test_exception.py  test_find_scp.py  test_find_scu.py  test_get_scp.py  test_get_scu.py  test_json_converter.py  test_move_scp.py  test_move_scu.py  test_reader.py  test_registry.py  test_scp_dispatcher.py  test_store_scp.py  test_store_scu.py  test_tag.py  test_uid.py  test_uids_dictionary.py  test_value.py  test_vr.py  test_vr_finder.py  test_writer.py  test_xml_converter.py
wrappers/: Assocation.cpp  AssocationParameters.cpp  CEchoRequest.cpp  CFindRequest.cpp  CGetRequest.cpp  CMakeLists.txt  CMoveRequest.cpp  CMoveResponse.cpp  CStoreRequest.cpp  DataSet.cpp  EchoSCP.cpp  Element.cpp  ElementsDictionary.cpp  FindSCP.cpp  FindSCU.cpp  GetSCP.cpp  Message.cpp  MoveSCP.cpp  MoveSCU.cpp  NCreateSCP.cpp  NSetRequest.cpp  NSetSCP.cpp  NSetSCU.cpp  PythonDataSetGenerator.h  PythonDataSetGenerator.txx  Request.cpp  Response.cpp  SCP.cpp  SCPDispatcher.cpp  StoreSCP.cpp  StoreSCU.cpp  Tag.cpp  VR.cpp  Value.cpp  Writer.cpp  endian.cpp  exception_factory.h  json_converter.cpp  odil.cpp  read.cpp  (+8 more)
wrappers/js/: CMakeLists.txt  DataSet.cpp  Tag.cpp  VR.cpp  odil.cpp
wrappers/python/: Assocation.cpp  AssocationParameters.cpp  Association.cpp  AssociationParameters.cpp  BasicDirectoryCreator.cpp  CEchoRequest.cpp  CEchoResponse.cpp  CFindRequest.cpp  CFindResponse.cpp  CGetRequest.cpp  CGetResponse.cpp  CMakeLists.txt  CMoveRequest.cpp  CMoveResponse.cpp  CStoreRequest.cpp  CStoreResponse.cpp  DataSet.cpp  DataSetGeneratorWrapper.h  EchoSCP.cpp  EchoSCU.cpp  Element.cpp  ElementsDictionary.cpp  Exception.cpp  FindSCP.cpp  FindSCU.cpp  GetSCP.cpp  GetSCU.cpp  Message.cpp  MoveSCP.cpp  MoveSCU.cpp  NCreateRequest.cpp  NCreateSCP.cpp  NSetRequest.cpp  NSetSCP.cpp  NSetSCU.cpp  Reader.cpp  Request.cpp  Response.cpp  SCP.cpp  SCPDispatcher.cpp  (+26 more)
wrappers/std/: map.cpp  vector.cpp
wrappers/webservices/: HTTPRequest.cpp  HTTPResponse.cpp  Message.cpp  QIDORSRequest.cpp  STOWRSRequest.cpp  Selector.cpp  URL.cpp  WADORS.cpp  WADORSRequest.cpp  (+1 more)
(+454 files in other folders)
